# qmj-tsx

./: .gitignore  LICENSE  Makefile  README.md  project.md  pyproject.toml
blog/: 2026-06-06-qmj-tsx-null-result.md  2026-06-13-low-vol-unwind-hiding-in-a-composite.md  2026-06-20-pca-as-diagnostic-not-rescue.md  2026-06-27-make-all-under-a-minute.md  2026-07-04-pre-registering-replication-gates.md  2026-07-11-typst-instead-of-latex.md  2026-07-18-yfinance-survivorship-tsx.md  2026-07-25-building-a-free-data-universe.md  README.md
configs/: default.yaml
data/raw/aqr/: Quality Minus Junk Factors Monthly.xlsx
data/raw/universe/: tsx_smallcap.csv
paper/: main.typ  references.bib
paper/sections/: conclusion.typ  data.typ  intro.typ  methodology.typ  results.typ  robustness.typ
paper/tables/: component_horserace.typ  pca_signals.typ  robustness.typ  sector_exclusion.typ
src/qmj_tsx/: __init__.py  cli.py  config.py
src/qmj_tsx/data/: __init__.py  benchmarks.py  ingest.py  ken_french.py  prices.py  universe.py
src/qmj_tsx/plots/: __init__.py  figures.py
src/qmj_tsx/portfolio/: __init__.py  construct.py
src/qmj_tsx/signals/: __init__.py  paper_q.py
src/qmj_tsx/stats/: __init__.py  regressions.py  replication.py  robustness.py
tests/: test_pipeline_core.py  test_prices.py  test_replication.py  test_robustness.py  test_scaffold.py
