[project]
name = "qmj-tsx"
version = "0.1.0"
description = "Replicating and extending Asness-Frazzini-Pedersen Quality Minus Junk on TSX small-caps."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jian Fen" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1",
    "linearmodels>=6.0",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas-datareader>=0.10",
    "pandas>=2.2",
    "pyarrow>=16",
    "pyyaml>=6.0",
    "requests>=2.32",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "tqdm>=4.66",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ipykernel>=6",
    "jupyterlab>=4",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
qmj = "qmj_tsx.cli:main"

[build-system]
requires = ["uv_build>=0.4,<0.12"]
build-backend = "uv_build"

[tool.uv_build]
module-name = "qmj_tsx"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
